--- a/db.properties
+++ b/db.properties
@@ -1,4 +1,4 @@
 user=developer
 password=admin
-dburl=jdbc:mysql://localhost:3306/coursejdbc?serverTimezone=UTC
+dburl=jdbc:mysql://localhost:3306/coursejdbc?serverTimezone=UTC&allowPublicKeyRetrieval=true
 useSSL=false
